# roshydro

./: README
catkin_ws/: arbotix.txt  dynamixel_motor.txt  gazebo_ros_pkgs.txt
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/beginner_tutorials/msg/: Num.msg
catkin_ws/src/beginner_tutorials/src/: listen.cpp  talker.cpp
catkin_ws/src/gazebo_ros_demos/custom_plugin_tutorial/: CMakeLists.txt  package.xml
catkin_ws/src/gazebo_ros_demos/rrbot_gazebo/: CMakeLists.txt
catkin_ws/src/gazebo_ros_demos/rrbot_gazebo/launch/: rrbot_world.launch
catkin_ws/src/gazebo_ros_demos/rrbot_gazebo/src/: template.cpp
catkin_ws/src/learning_tf/: CMakeLists.txt  package.xml
catkin_ws/src/learning_tf/launch/: demo.launch  test.rviz
catkin_ws/src/learning_tf/src/: turtle_tf_listener.cpp
catkin_ws/src/rbx2/: rbx2-prereq.sh
dancer_ros/: PCTransmit_leftKick.txt
dancer_ros/src/acrobot/acrobot_control/: CMakeLists.txt  package.xml
dancer_ros/src/acrobot/acrobot_description/: CMakeLists.txt  acrobot.rviz  package.xml
dancer_ros/src/acrobot/acrobot_gazebo/: CMakeLists.txt  package.xml
dancer_ros/src/dyna/: CMakeLists.txt  package.xml
dancer_ros/src/dyna/config/: acrobot.yaml  param_test.yaml  test.yaml  zjudancer.yaml
dancer_ros/src/dyna/launch/: acrobot.launch  controller_manager.launch  param_test.launch  zjudancer.launch
dancer_ros/src/dyna/src/: acrobot.cpp  param_test.cpp  (+2 more)
lrrp/src/chap4/: CMakeLists.txt  package.xml
lrrp/src/chap5/: CMakeLists.txt  package.xml
ros-darwin/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
(+47 files in other folders)
